--- a/index.html
+++ b/index.html
@@ -1,68 +1,254 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/app.css">
-    <title>Ridho | Blog</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <!-- 
+        Memberikan instruksi ke browser untuk mengontrol dimesi dari halaman dan skalanya 
+        width=device-width digunakan untuk mensets lebar dari halaman untuk mengikuti lebar screen dari device
+        initial-scale=1.0 digunakan untuk set initial zoom ketika halaman di muat pertama kali oleh browser.
+    -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- 
+        Menghubungkan eksternal resource dari bootstrap ke dokumen ini.
+     -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--
+        Menghubungkan file css dengan nama style.css yang terdapat pada folder css
+    -->
+    <link rel="stylesheet" href="/css/style.css">
+    <title>My Portfolio</title>
 </head>
 
 <body>
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="layout/contact.html">Contact Me</a>
-    </div>
 
-    <div class="header">
-        <h2>Ridho | Blog</h2>
-    </div>
-
-    <div class="row">
-        <div class="leftcolumn">
-            <div class="card">
-                <h2>Bupati Jembrana Targetkan 1.200 Vaksinasi COVID-19 Per Hari</h2>
-                <h5>Rabu, 17 Maret 2021 | 15:22 WIB</h5>
-                <img class="fakeimg" style="height: fit-content;"
-                    src="https://thumb.viva.co.id/media/frontend/thumbs3/2021/03/01/603c88928911f-vaksinasi-covid-19-pedagang-pasar-kota-tangerang_665_374.jpg" />
-                <p class="text">Bupati Jembrana I Nengah Tamba menargetkan vaksinasi COVID-19 di kabupaten wilayahnya
-                    itu bisa menjangkau 1.200 sasaran dalam satu hari. "Sampai saat ini sudah sekitar 9000 orang yang
-                    divaksinasi di Kabupaten Jembrana. Mereka dari
-                    kalangan tenaga kesehatan, ASN, TNI/Polri dan petugas layanan publik," katanya dalam keterangan
-                    resmi yang diterima di Negara, Tabanan, Rabu.</p>
-
-            </div>
-            <div class="card">
-                <h2>5 Dinosaurus yang Lebih Ganas dari T-Rex</h2>
-                <h5>Kamis, 18 Maret 2021 | 07:25 WIB</h5>
-                <img class="fakeimg" style="height: fit-content;"
-                    src="https://thumb.viva.co.id/media/frontend/thumbs3/2021/03/18/60529c117615c-5-dinosaurus-yang-lebih-ganas-dari-t-rex_665_374.jpg" />
-                <p class="text">Apakah ada dinosaurus yang lebih ganas dari T-Rex? Apa dinosaurus pemakan daging
-                    terbesar, terkuat,
-                    dan terganas yang pernah ada Tyrannosaurus atau Tyrannosaurus Rex masih miliknya? Ternyata tidak
-                    lagi.
-                    Selama 100 tahun terakhir hanya Tyrannosaurus yang hanya diketahui sebagai pemakan daging terkuat
-                    bahkan secara mekanis tidak ada yang menyainginya. Tetapi semua berubah pada tahun 1990-an, tiga
-                    kerangka yang ditemukan satu di Amerika Selatan dan dua di Afrika.</p>
+    <!-- Navigasi -->
+    <!-- Membuat navigasi bar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="#" class="navbar-brand">Triwibowo Ridho</a>
             </div>
         </div>
-        <div class="rightcolumn">
-            <div class="card">
-                <h3>Popular Post</h3>
-                <img class="popular-post-image"
-                    src="https://thumb.viva.co.id/media/frontend/thumbs3/2017/03/10/58c23c2615203-senyum-dan-tertawa-bisa-bikin-kamu-awet-muda_665_374.jpg" /><br>
-                <img class="popular-post-image"
-                    src="https://thumb.viva.co.id/media/frontend/thumbs3/2021/03/19/6053de2b1f249-ini-dia-5-aplikasi-pembuat-stiker-whatsapp-bisa-pakai-foto-sendiri_665_374.jpg" /><br>
-                <img class="popular-post-image"
-                    src="https://thumb.viva.co.id/media/frontend/thumbs3/2021/03/19/6054057bdfaf4-deden-noy-tetaplah-eksplorasi-musik-dengan-kaleng-bekasmu_665_374.jpg" />
+    </nav>
+    <!-- Akhir navigasi -->
+
+    <!-- Jumbotron -->
+    <!--
+        Jumbotron digunakan untuk menampilkan pengumuman, kontent khusus,
+        atau semacam informasi yang ditampilkan pada halaman. kemudian ada
+        text-center yang digunakan untuk menengahkan text serta image 
+        yang terdapat didalam element ini.
+    -->
+    <div class="jumbotron text-center">
+        <!--
+            Class rounder-circle didalam element ini digunakan untuk membuat gambar
+            berbentuk round atau berbentuk bulat.
+        -->
+        <img src="images/profile.jpg" alt="My Profile" class="rounded-circle">
+        <h1>Triwibowo Ridho Permana</h1>
+        <p>Student | Mobile Developer</p>
+    </div>
+    <!-- Akhir Jumbotron -->
+
+    <!-- About -->
+    <section class="about" id="about">
+        <!--
+            Class container berfungsi untuk membungkus kontent web. container juga 
+            merupakan syarat untuk menggunakan default grid system yang disediakan oleh bootstrap.
+        -->
+        <div class="container">
+            <!--
+                Membuat baris, sehingga item-item yang terdapat didalam elemen ini akan tampil
+                dalam bentuk baris.
+            -->
+            <div class="row">
+                <!--
+                    Membuat kolom, dimana sm-12 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 12 grid (full).
+                -->
+                <div class="col-sm-12">
+                    <!--
+                        Class text-center digunakan untuk menampilkan teks agar berada di tengah
+                    -->
+                    <h2 class="text-center">About</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <!--
+                Membuat baris, sehingga item-item yang terdapat didalam elemen ini akan tampil
+                dalam bentuk baris dengan padding untuk y axis diberikan 3.
+            -->
+            <div class="row py-3">
+                <!--
+                    Membuat kolom, dimana sm-6 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 6 grid (half).
+                -->
+                <div class="col-sm-6">
+                    <!--
+                        Membuat text paragraph agar rata kiri kanan.
+                    -->
+                    <p class="text-justify">
+                        Mollit consequat nostrud laboris dolor ullamco Lorem cillum laborum exercitation excepteur nisi
+                        proident ea tempor. Nisi esse ipsum in exercitation nostrud laborum ex dolor fugiat. Fugiat
+                        exercitation incididunt minim eu consequat est sunt. Quis nostrud proident ullamco laboris
+                        exercitation consectetur.
+                    </p>
+                    <!--
+                        Membuat text paragraph agar rata kiri kanan.
+                    -->
+                    <p class="text-justify">
+                        In in reprehenderit anim ad nisi dolor id. Voluptate nulla Lorem non occaecat voluptate velit
+                        proident deserunt voluptate ipsum sunt exercitation est. Sint ullamco enim deserunt cillum nisi
+                        occaecat officia reprehenderit est pariatur incididunt ad duis. Officia laboris ullamco
+                        excepteur cillum irure elit aliquip minim ut.
+                    </p>
+                    <!--
+                        Membuat text paragraph agar rata kiri kanan.
+                    -->
+                    <p class="text-justify">
+                        Voluptate exercitation Lorem occaecat proident incididunt anim eiusmod officia non excepteur.
+                        Dolor tempor commodo quis ad duis consectetur. Non eiusmod exercitation qui in aliquip Lorem ad
+                        consequat minim sit nostrud excepteur duis.
+                    </p>
+                </div>
+                <!--
+                    Membuat kolom, dimana sm-6 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 6 grid (half).
+                -->
+                <div class="col-sm-6">
+                    <!--
+                        Membuat text paragraph agar rata kiri kanan.
+                    -->
+                    <p class="text-justify">
+                        Ullamco elit sunt magna esse non commodo veniam adipisicing adipisicing deserunt do aliqua ipsum
+                        ut.
+                        Occaecat veniam qui mollit dolore nulla laboris nostrud reprehenderit cupidatat. Consequat aute
+                        quis
+                        minim qui quis tempor et velit nisi. Et ea incididunt ipsum commodo ex id cupidatat.
+                        Exercitation
+                        cupidatat ad incididunt veniam proident nulla.
+                    </p>
+                    <!--
+                        Membuat text paragraph agar rata kiri kanan.
+                    -->
+                    <p class="text-justify">
+                        Laborum consectetur quis officia magna eiusmod deserunt quis. Mollit nisi esse laboris minim
+                        qui. Magna ea mollit laborum in nisi minim excepteur. Pariatur nisi eiusmod anim elit. Ad eu et
+                        cupidatat excepteur enim cupidatat proident Lorem et magna.
+                    </p>
+                    <!--
+                        Membuat text paragraph agar rata kiri kanan.
+                    -->
+                    <p class="text-justify">
+                        Cupidatat eiusmod irure adipisicing consequat eu non qui esse laborum adipisicing non elit
+                        reprehenderit. Laboris non adipisicing esse anim consectetur ad minim est aute ullamco nostrud
+                        commodo laboris velit. Sint labore do anim adipisicing culpa proident eu occaecat tempor
+                        laborum.
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    <!-- Akhir About -->
 
-    <div class="footer">
-        <h2>Ridho | Blog 2021&#169;</h2>
-    </div>
+    <!-- Portfolio -->
+    <section class="portfolio" id="portfolio">
+        <!--
+            Class container berfungsi untuk membungkus kontent web. container juga 
+            merupakan syarat untuk menggunakan default grid system yang disediakan oleh bootstrap.
+        -->
+        <div class="container py-5">
+            <!--
+                Membuat baris, sehingga item-item yang terdapat didalam elemen ini akan tampil
+                dalam bentuk baris.
+            -->
+            <div class="row">
+                <!--
+                    Membuat kolom, dimana sm-12 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 12 grid (full).
+                -->
+                <div class="col-sm-12">
+                    <!--
+                        Class text-center digunakan untuk menampilkan teks agar berada di tengah
+                    -->
+                    <h2 class="text-center">Portfolio</h2>
+                    <hr>
+                </div>
+            </div>
+            <!--
+                Membuat baris dengan padding y axis yang diberikan adalah 3.
+            -->
+            <div class="row py-3">
+                <!--
+                    Membuat kolom, dimana sm-4 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 6 grid (half), lalu menset margin
+                    bottom dengan nilai 3.
+                -->
+                <div class="col-sm-4 mb-3">
+                    <!--
+                        Menampilkan image dari resource dengan nama 1.png yang terdapat pada folder images/
+                        class img-thumbnail digunakan untuk membuat gambar thumbnail (berupa gambar yang memiliki
+                        bingkai putih dipinggirnya yang disediakan oleh bootstrap)
+                    -->
+                    <img src="/images/1.png" class="img-thumbnail">
+                </div>
+                <!--
+                    Membuat kolom, dimana sm-4 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 6 grid (half), lalu menset margin
+                    bottom dengan nilai 3.
+                -->
+                <div class="col-sm-4 mb-3">
+                    <img src="/images/2.png" class="img-thumbnail">
+                </div>
+                <!--
+                    Membuat kolom, dimana sm-4 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 6 grid (half), lalu menset margin
+                    bottom dengan nilai 3.
+                -->
+                <div class="col-sm-4 mb-3">
+                    <img src="/images/3.png" class="img-thumbnail">
+                </div>
+                <!--
+                    Membuat kolom, dimana sm-4 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 6 grid (half), lalu menset margin
+                    bottom dengan nilai 3.
+                -->
+                <div class="col-sm-4 mb-3">
+                    <img src="/images/4.png" class="img-thumbnail">
+                </div>
+                <!--
+                    Membuat kolom, dimana sm-4 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 6 grid (half), lalu menset margin
+                    bottom dengan nilai 3.
+                -->
+                <div class="col-sm-4 mb-3">
+                    <img src="/images/5.jpg" class="img-thumbnail">
+                </div>
+                <!--
+                    Membuat kolom, dimana sm-4 digunakan untuk mengatur grid pada monitor yang
+                    berukuran tablet agar menggunakan sebanyak 6 grid (half), lalu menset margin
+                    bottom dengan nilai 3.
+                -->
+                <div class="col-sm-4 mb-3">
+                    <img src="/images/6.png" class="img-thumbnail">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir Portfolio -->
+
+    <!-- jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
 </body>
 
