--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <!-- Navigasi -->
     <!-- Membuat navigasi bar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a href="#" class="navbar-brand">Triwibowo Ridho</a>
+                <a href="#" class="navbar-brand"></a>
             </div>
         </div>
     </nav>
