--- a/index.html
+++ b/index.html
@@ -26,12 +26,46 @@
 <body>
 
     <!-- Navigasi -->
-    <!-- Membuat navigasi bar -->
-    <nav class="navbar navbar-fixed-top navbar-dark bg-dark">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a href="#" class="navbar-brand"></a>
-            </div>
+    <!-- 
+        Membuat navigasi bar
+
+        Class navbar akan mengapply css kedalam navigasi bar dari bootstrap css,
+        navbar-expand-lg digunakan untuk memanjangkan navigasi bar jika screen size = dekstop,
+        navbar-dark bg-dark digunakan untuk memberi warna background hitam pada navigasi bar
+     -->
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <!--
+            Membuat anchor element dengan class navbar-brand
+        -->
+        <a class="navbar-brand" href="#">Triwibowo Ridho</a>
+        <!--
+            Membuat button yang jika diklik menu dari navigation akan collapse
+
+            Class navbar-toggler digunakan untuk menggunakan collapse plugin dan navigation toggling yang disediakan oleh bootstrap
+            data-toggle digunakan untuk menghide atau menshow content ketika button di toggle dengan target content yang akan dihide
+            berada pada element dengan id navbarSupportedContent.
+        -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!--
+            Membuat navbar item
+        -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!--
+                Class navbar-nav class digunakan untuk menerapkan style yang full-height dan lightweight navgation,
+                kemudian mr-auto digunakan untuk menset margin secara otomatis.
+            -->
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/layout/contact.html">Contact Me</a>
+                </li>
+            </ul>
         </div>
     </nav>
     <!-- Akhir navigasi -->
